--- a/.github/workflows/build_test_deploy.yml
+++ b/.github/workflows/build_test_deploy.yml
@@ -26,14 +26,16 @@ jobs:
               uses: actions/setup-node@v4
             - name: Setup Bun
               uses: oven-sh/setup-bun@v2
+              with:
+                  bun-version: latest
             - name: Install Dependencies
-              run: yarn install --frozen-lockfile
+              run: bun install
             - name: Build
-              run: yarn run build
+              run: bun run build
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: .vuepress/dist/
+                  path: ./dist/
     deploy:
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         environment:
@@ -55,9 +57,9 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: '22'
-                  cache: 'yarn'
-                  cache-dependency-path: ./yarn.lock
+                  cache: 'bun'
+                  cache-dependency-path: ./bun.lock
             - name: Install
-              run: yarn install --frozen-lockfile
+              run: bun install
             - name: Lint
-              run: yarn run lint-ci
+              run: bun run lint-ci
