--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@astrojs/svelte": "5.7.3",
     "@astrojs/tailwind": "5.1.2",
     "astro": "4.16.10",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "svelte": "^4.2.19",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
